2022-10-26T08:26:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327385976 # 170
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 61 193 / 76 221
* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-26]

2022-10-26T02:01:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3325634770 # 169
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 60 191 / 76 220
* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 76 221
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-11] / []

2022-10-25T16:42:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3322732421 # 168
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 60 191 / 76 220
* notice: next accum: outdated-unq outdated-all / unq all: 60 191 / 76 220
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-11 2022-10-25]

2022-10-25T08:38:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3319393796 # 167
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 60 191 / 75 219
* notice: next accum: outdated-unq outdated-all / unq all: 60 191 / 76 220
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-25]

2022-10-25T02:25:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3317711722 # 166