@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-13T02:14:26Z",
-  "count" : 2,
+  "timestamp" : "2022-10-26T16:30:52Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
