@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-26T08:26:51Z",
+  "timestamp" : "2022-10-26T16:30:52Z",
   "count_outdated" : 193,
   "uniques_outdated" : 61,
   "count" : 222,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
