@@ -1,3 +1,11 @@
+2022-10-26T16:30:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3330818531 # 171
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
+* notice: next accum: outdated-unq outdated-all / unq all: 61 193 / 77 222
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-12 2022-10-26]
+
 2022-10-26T08:26:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3327385976 # 170
 * notice: last 14d: unq all: 2 29
